# attest

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
attestdb/: __init__.py  __main__.py  brain.py  cli_commands.py  config.py  manager.py  mcp_install.py  mcp_server.py  mcp_server_http.py  telemetry.py
attestdb/connectors/: __init__.py  airtable.py  base.py  csv_connector.py  elasticsearch.py  gdocs.py  gdrive.py  github.py  gmail.py  google_sheets.py  http_connector.py  hubspot.py  linear.py  mongodb.py  mssql.py  mysql.py  notion.py  pagerduty.py  postgres.py  predicates.py  s3.py  scheduler.py  slack.py  sqlite.py  synthetic.py  token_store.py
attestdb/core/: __init__.py  browser_chat.py  chat.py  confidence.py  consensus.py  domain_spec.py  errors.py  hashing.py  normalization.py  provenance.py  providers.py  security.py  types.py  vocabulary.py
attestdb/core/domain_specs/: __init__.py  bio.json
attestdb/data/: sample_claims.json
attestdb/discovery/: __init__.py  aligner.py  analyzer.py  claim_templates.py  drift_detector.py  sampler.py  schema_map.py  schema_versioning.py  template_migrator.py  unstructured.py
attestdb/extraction/: __init__.py  claim_normalizer.py  entity_linker.py  unstructured_pipeline.py
attestdb/extraction/prompt_templates/: __init__.py  document_template.py  email_template.py  meeting_notes_template.py  slack_template.py
attestdb/infrastructure/: __init__.py  access_resolver.py  agent_registry.py  agents.py  analytics.py  ask_engine.py  attest_db.py  audit_log.py  autodidact.py  build_manifest.py  bulk_loader.py  bulk_loaders_corpgov.py  bulk_loaders_cybersec.py  bulk_loaders_finreg.py  bulk_loaders_legal.py  bulk_loaders_pharma.py  bulk_loaders_scilit.py  bulk_loaders_supplychain.py  display_resolver.py  embedding_index.py  entity_manager.py  entity_resolver.py  eval_engine.py  event_bus.py  evidence_sources.py  id_mapper.py  ingestion.py  intelligence_gateway.py  migration.py  policy_store.py  query_engine.py  rbac.py  secure_store_proxy.py  security.py  snapshot.py  topic_threads.py  tracing.py  verification_engine.py  webhooks.py
attestdb/intelligence/: __init__.py  heuristic_extractor.py
attestdb/resolution/: __init__.py  change_detector.py  entity_index.py  ingestion_hook.py  matcher.py  materialized_views.py
attestdb/skills/: connectors.md  core-data-model.md  curator.md  deployment.md  entity-normalization.md  llm-providers.md  mcp-server.md  query-engine.md  rust-engine.md  text-extractor.md
docs/: 01_overview.md  02_architecture.md  03_science_vertical.md  06_api_spec.md  07_design_decisions.md  09_research_precedents.md
examples/: quickstart.py
rust/: Cargo.toml
rust/attest-core/: Cargo.toml
rust/attest-core/src/: confidence.rs  errors.rs  hashing.rs  lib.rs  normalization.rs  types.rs  vocabulary.rs
rust/attest-core/tests/: golden_vectors.rs
rust/attest-migrate/: Cargo.toml
rust/attest-migrate/src/: main.rs
rust/attest-py/: Cargo.toml  pyproject.toml
rust/attest-py/src/: lib.rs
rust/attest-store/: Cargo.toml
rust/attest-store/benches/: store_bench.rs
rust/attest-store/src/: claim_log.rs  entity_store.rs  file_format.rs  journal.rs  lib.rs  metadata.rs  store.rs  union_find.rs  wal.rs
rust/attest-store/src/backend/: lmdb.rs  memory.rs  migration.rs  mod.rs  redb.rs  tables.rs  traits.rs
tests/cross_lang/: golden_vectors.json  test_golden_vectors_python.py
tests/fixtures/: calibration_questions.py  connector_data.py  curator_eval_dataset.py  generator.py  pubmed_search.py  synthetic_claims.py
tests/integration/: test_advanced_apis.py  test_autodidact.py  test_cli.py  test_confidence_v2.py  test_crown_jewels.py  test_e2e_user_journey.py  test_entity_resolution.py  test_ingestion.py  test_inquiry.py  test_mcp_http.py  test_multi_source_loading.py  test_new_api.py  test_phase_c_methods.py  test_provenance_cascade.py  test_query.py  test_retraction.py  test_snapshot.py  test_symmetric.py  test_time_travel.py  test_topic_membership.py
tests/unit/: test_audit_chain.py  test_calibration.py  test_confidence_v2.py  test_embedding_index.py  test_entity_resolver.py  test_event_hooks.py  test_hashing.py  test_knowledge_health.py  test_mcp_server.py  test_normalization.py
