[project]
name = "attestdb"
version = "0.1.41"
description = "A brain for AI agents that actually learns — confidence scoring, negative results, gap detection. pip install attestdb && attest brain install"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [
    {name = "Omic Research"},
]
keywords = ["knowledge-graph", "claims", "provenance", "database", "mcp", "ai-agents", "knowledge-base", "rag", "biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "attest-py>=0.1.30",
    "usearch>=2.9",
    "numpy>=1.24",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]
llm = [
    "openai>=1.0",
]
browser = [
    "playwright>=1.40",
    "openai>=1.0",
]
mcp = [
    "mcp[cli]>=1.0",
]
otel = [
    "opentelemetry-api>=1.20",
]
all = [
    "attestdb[llm,mcp,otel]",
]

[project.urls]
Homepage = "https://attestdb.com"
Documentation = "https://attestdb.com/quickstart.html"
Repository = "https://github.com/omic/attest"

[project.scripts]
attestdb = "attestdb.__main__:main"
attest = "attestdb.__main__:main"
attest-mcp = "attestdb.mcp_install:main"
attest-mcp-http = "attestdb.mcp_server_http:main"
attest-brain = "attestdb.brain:_cli_main"
attest-manager = "attestdb.manager:_cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["attestdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
