[package]
name = "attest-migrate"
version = "0.1.0"
edition = "2021"
description = "Migrate redb databases to LMDB format"

[[bin]]
name = "attest-migrate"
path = "src/main.rs"

[dependencies]
attest-core = { path = "../attest-core" }
attest-store = { path = "../attest-store" }
redb = "2.6"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
