[package]
name = "attest-py"
version = "0.1.6"
edition = "2021"
rust-version = "1.80"
description = "PyO3 bindings for Attest Rust storage engine"

[lib]
name = "attest_rust"
crate-type = ["cdylib"]

[dependencies]
attest-core = { path = "../attest-core" }
attest-store = { path = "../attest-store" }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = "1"
