[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "attest-py"
version = "0.1.5"
description = "Rust storage engine for AttestDB (PyO3 bindings)"
requires-python = ">=3.11"
license = {text = "BSL-1.1"}
authors = [
    {name = "Omic Research"},
]
keywords = ["knowledge-graph", "database", "rust", "storage-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://attestdb.com"
Repository = "https://github.com/omic/attest"

[tool.maturin]
module-name = "attest_rust"
